Fix add commment hiding on narrow traditional table

--- a/webapp/traditionalTable/style.less
+++ b/webapp/traditionalTable/style.less
@@ -8,4 +8,5 @@
 
 .traditional-table__review-indicator-row-anchor {
   position: absolute;
+  right: 0;
 }
